# latex_thesis_template

./: .$PBKDF2_drawio.drawio.bkp  .dockerignore  .editorconfig  .env.example  .env.example.jinja  .gitignore  .gitmodules  .latexmkrc  AESGCM.mmdc  ChaChaPoly.mmdc  Dockerfile  LICENSE  LICENSE.md  PBKDF2.mmdc  PBKDF2_drawio.drawio  README.md  Taskfile.yml  Taskfile.yml.jinja  [[ main_tex_filename ]].jinja  _D41D8CD98F00B204E9800998ECF8427E.config.minted  appendix_b.tex  backup.rar  bibliography.bib  bibliography_setup.tex  choice.mmdc  compile_mermaid.py  copier.yml  counters.tex  diff_config.toml  diff_config.toml.jinja  docker-compose.ci-cache.yaml  docker-compose.yaml  docker-compose.yaml.jinja  docs_macros.py  flow.mmdc  flow_get.mmdc  flow_load.mmdc  flow_web.mmdc  get_data.mmdc  include_listings.tex  (+40 more)
.githooks/: pre-commit
.github/: copilot-instructions.md
_minted/: 7A54C1E9BBAE4D9549D9CB0AF47AE8EB.highlight.minted  _871CAD300F691A1C928C5504CFF89C06.index.minted
appendix/: appendix_b.tex  include_listings.tex
docker/: crop.dockerfile  docs.dockerfile  docx.dockerfile  latex.dockerfile  mermaid.docker-compose.yaml  mermaid.dockerfile  python.docker-compose.yaml  python.dockerfile
docs/: README.md  diagrams.md  docker.md  git-hooks.md  legal.md  manual-build.md  pdf-diff.md  project-structure.md  quick-start.md  requirements.md  source-code.md  texstudio.md  title-pages.md  troubleshooting.md  zensical.md
docs-book/: book.toml
docx/: задание.docx  титульник.docx
figures/: .gitkeep
includes/: abbreviations.en.md  abbreviations.md
mermaid/: cia.mmd  (+11 more)
(+166 files in other folders)
