[project]
name = "diploma-latex"
version = "0.1.0"
description = "Tooling for building and maintaining the diploma project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "black==26.3.1",
  "choreographer==1.3.0",
  "cogapp==3.6.0",
  "colorama==0.4.6",
  "iniconfig==2.3.0",
  "kaleido==1.2.0",
  "logistro==2.0.1",
  "narwhals==2.20.0",
  "numpy==2.4.4",
  "orjson==3.11.8",
  "packaging==26.2",
  "pandas==3.0.2",
  "platformdirs==4.9.6",
  "plotly==6.7.0",
  "pluggy==1.6.0",
  "plumbum>=1.9,<2",
  "pygments==2.20.0",
  "rich==14.2.0",
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "pytest-timeout==2.4.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.2.1",
  "simplejson==4.1.1",
  "six==1.17.0",
  "typer>=0.12,<1",
  "tzdata==2026.2",
]

[tool.black]
line-length = 120
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.aux_files
  | \.aux_files_docker
  | \.cache
  | \.git
  | \.pdf_diff
  | \.pytest_cache
  | \.venv
  | docs-site
)/
'''
